tests/transpiler/x/zig/group_by_sort.error
run: exit status 1
/workspace/mochi/tests/transpiler/x/zig/group_by_sort.zig:15:19: error: unable to infer array size
